--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE= grp_06_db
-DB_USERNAME=  grp_06
-DB_PASSWORD= v9YkRHpD
+DB_USERNAME= root
+DB_PASSWORD= 
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
