--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3307
 DB_DATABASE= unirent
-DB_USERNAME= grp_06_db
+DB_USERNAME= root
 DB_PASSWORD= 
 
 BROADCAST_DRIVER=log
