--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
-DB_PORT=3307
-DB_DATABASE= unirent
+DB_PORT=3306
+DB_DATABASE= grp_06_db
 DB_USERNAME= root
 DB_PASSWORD= 
 
