--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=
+DB_HOST=localhost
 DB_PORT=3307
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=grp_06_db
+DB_USERNAME=grp_06
+DB_PASSWORD=v9YkRHpD
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
